--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,9 +43,10 @@
         <Button
             android:id="@+id/loginBtn_id"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_below="@+id/passwordEditText_id"
-            android:text="Login" />
+            android:text="Login"
+            android:background="@drawable/ic_login_button"/>
 
         <TextView
             android:id="@+id/newAccountBtn_id"
