updated login layout

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,16 +46,37 @@
             android:layout_height="70dp"
             android:layout_below="@+id/passwordEditText_id"
             android:text="Login"
+            android:onClick="btnClicked"
             android:background="@drawable/ic_login_button"/>
 
         <TextView
-            android:id="@+id/newAccountBtn_id"
+            android:id="@+id/newAccountBtn_as_student_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="16dp"
+            android:layout_above="@+id/or_id"
+            android:onClick="btnClicked"
             android:gravity="center"
-            android:text="CREATE NEW ACCOUNT" />
+            android:text="SIGNUP AS STUDENT" />
+
+        <TextView
+            android:id="@+id/or_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/newAccountBtn_as_teacher_id"
+            android:gravity="center"
+            android:text="OR"
+            android:layout_marginBottom="16dp"/>
+
+        <TextView
+            android:id="@+id/newAccountBtn_as_teacher_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="btnClicked"
+            android:layout_marginBottom="30dp"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:text="SIGNUP AS TEACHER" />
 
     </RelativeLayout>
 
