--- a/app/src/main/res/layout/student_post_layout.xml
+++ b/app/src/main/res/layout/student_post_layout.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/post_title_id"
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Title"
-            android:padding="10dp" />
+            android:layout_height="200dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/navbarsky"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,140 +21,88 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
                 android:layout_weight="50"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <Spinner
-                    android:id="@+id/numOfDays_job_post_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:entries="@array/days_in_a_week"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    android:prompt="@string/usertype"/>
-
-                <Spinner
-                    android:id="@+id/spinner_category_id"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:entries="@array/preferred_medium"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
+                    android:padding="10dp"
+                    android:layout_marginTop="16dp"
+                    android:entries="@array/account_type_spinner"
                     android:prompt="@string/usertype" />
 
-                <!--<Spinner
+                <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:entries="@array/preferred_medium"
-                    android:prompt="@string/usertype" />-->
+                    android:padding="10dp"
+                    android:layout_marginTop="16dp"
+                    android:entries="@array/account_type_spinner"
+                    android:prompt="@string/usertype" />
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:layout_marginTop="16dp"
+                    android:entries="@array/account_type_spinner"
+                    android:prompt="@string/usertype" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
                 android:layout_weight="50"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <Spinner
-                    android:id="@+id/tutor_gender_job_post_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:entries="@array/preferred_teacher_gender"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    android:prompt="@string/usertype" />
-
-                <Spinner
-                    android:id="@+id/spinner_class_id"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:entries="@array/class_of_student"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    android:prompt="@string/usertype" />
-
-                <!--<Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
+                    android:layout_marginTop="16dp"
+                    android:padding="10dp"
                     android:entries="@array/account_type_spinner"
-                    android:prompt="@string/usertype" />-->
+                    android:prompt="@string/usertype" />
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:padding="10dp"
+                    android:entries="@array/account_type_spinner"
+                    android:prompt="@string/usertype" />
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:padding="10dp"
+                    android:entries="@array/account_type_spinner"
+                    android:prompt="@string/usertype" />
 
             </LinearLayout>
 
         </LinearLayout>
 
         <EditText
-            android:id="@+id/job_post_subject_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Subjects"
-            android:padding="10dp" />
-
-        <LinearLayout
-            android:id="@+id/calender_view_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <TextView
-                android:id="@+id/calender_textView_id"
-                android:layout_width="0dp"
-                android:layout_weight="80"
-                android:layout_height="wrap_content"
-                android:text="select date to start  "
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="20"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_action_calender" />
-
-        </LinearLayout>
-
-
-        <CalendarView
-            android:id="@+id/calendar_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </CalendarView>
-
-        <EditText
-            android:id="@+id/job_post_salary_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Salary Range" />
-
-        <EditText
-            android:id="@+id/job_address_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Address" />
-
-        <EditText
-            android:id="@+id/job_post_additional_info_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Any additional information" />
-
-        <Button
-            android:id="@+id/job_post_btn_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:background="#0f53c1"
             android:padding="10dp"
-            android:text="POST"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:hint="Salary Range"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="16dp"
+            android:hint="Any additional information"/>
 
     </LinearLayout>
 
