--- a/app/src/main/res/layout/job_post_layout.xml
+++ b/app/src/main/res/layout/job_post_layout.xml
@@ -11,7 +11,7 @@
         android:minHeight="88dp">
 
         <ImageView
-            android:id="@+id/list_item_icon_id"
+            android:id="@+id/user_pro_pic_id"
             android:layout_width="88dp"
             android:layout_height="88dp"
             android:src="@mipmap/ic_launcher"/>
@@ -25,7 +25,7 @@
             android:paddingLeft="16dp">
 
             <TextView
-                android:id="@+id/miwok_text_view_id"
+                android:id="@+id/title_text_view_id"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_toRightOf="@+id/list_item_icon"
@@ -37,7 +37,7 @@
                 android:text="Title" />
 
             <TextView
-                android:id="@+id/default_text_view_id"
+                android:id="@+id/salary_text_view_id"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_below="@+id/miwok_text_view"
