--- a/app/src/main/res/layout/student_post_layout.xml
+++ b/app/src/main/res/layout/student_post_layout.xml
@@ -14,39 +14,45 @@
             android:scaleType="fitXY"
             android:src="@drawable/navbarsky"/>
 
+        <EditText
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Title"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="50"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:orientation="vertical">
 
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:layout_marginTop="16dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:entries="@array/account_type_spinner"
                     android:prompt="@string/usertype" />
 
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:layout_marginTop="16dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:entries="@array/account_type_spinner"
                     android:prompt="@string/usertype" />
 
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:layout_marginTop="16dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:entries="@array/account_type_spinner"
                     android:prompt="@string/usertype" />
 
@@ -56,29 +62,28 @@
                 android:layout_width="0dp"
                 android:layout_weight="50"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:orientation="vertical">
 
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:padding="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:entries="@array/account_type_spinner"
                     android:prompt="@string/usertype" />
 
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:padding="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:entries="@array/account_type_spinner"
                     android:prompt="@string/usertype" />
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:padding="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:entries="@array/account_type_spinner"
                     android:prompt="@string/usertype" />
 
@@ -89,19 +94,11 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:hint="Salary Range"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="16dp"
             android:hint="Any additional information"/>
 
     </LinearLayout>
