--- a/app/src/main/res/layout/job_feed_layout.xml
+++ b/app/src/main/res/layout/job_feed_layout.xml
@@ -27,9 +27,7 @@
             <TextView
                 android:id="@+id/title_text_view_id"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_toRightOf="@+id/list_item_icon"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:gravity="bottom"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@android:color/black"
@@ -39,10 +37,7 @@
             <TextView
                 android:id="@+id/salary_text_view_id"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_below="@+id/miwok_text_view"
-                android:layout_toRightOf="@+id/list_item_icon"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:gravity="top"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
