--- a/app/src/main/res/layout/student_post_layout.xml
+++ b/app/src/main/res/layout/student_post_layout.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/navbarsky" />
 
         <EditText
             android:id="@+id/post_title_id"
@@ -24,8 +19,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -44,7 +38,7 @@
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:entries="@array/preferred_teacher_gender"
+                    android:entries="@array/preferred_medium"
                     android:paddingBottom="10dp"
                     android:paddingTop="10dp"
                     android:prompt="@string/usertype" />
@@ -68,7 +62,7 @@
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:entries="@array/class_of_student"
+                    android:entries="@array/preferred_teacher_gender"
                     android:paddingBottom="10dp"
                     android:paddingTop="10dp"
                     android:prompt="@string/usertype" />
@@ -76,7 +70,7 @@
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:entries="@array/preferred_medium"
+                    android:entries="@array/class_of_student"
                     android:paddingBottom="10dp"
                     android:paddingTop="10dp"
                     android:prompt="@string/usertype" />
@@ -92,6 +86,21 @@
             </LinearLayout>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/calender_textView_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
+            android:text="click to select a start date" />
+
+        <CalendarView
+            android:id="@+id/calendar_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </CalendarView>
 
         <EditText
             android:id="@+id/job_salary_id"
@@ -111,7 +120,14 @@
             android:layout_height="wrap_content"
             android:hint="Any additional information" />
 
-
+        <TextView
+            android:background="#0f53c1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:padding="10dp"
+            android:layout_gravity="right"
+            android:text="POST" />
 
     </LinearLayout>
 
