--- a/app/src/main/res/layout/dash_board_job_feed_layout.xml
+++ b/app/src/main/res/layout/dash_board_job_feed_layout.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/newsView_newsFeed_RecyclerView_id"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:scrollbars="vertical">
 
 </android.support.v7.widget.RecyclerView>
