--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/spinner_item_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:textStyle="bold"
         />
 
 </LinearLayout>
