teacher tab layout content populated

--- a/app/src/main/res/layout/student_post_layout.xml
+++ b/app/src/main/res/layout/student_post_layout.xml
@@ -32,16 +32,14 @@
                     android:layout_height="wrap_content"
                     android:entries="@array/days_in_a_week"
                     android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    android:prompt="@string/usertype" />
+                    android:paddingTop="10dp" />
 
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:entries="@array/preferred_medium"
                     android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    android:prompt="@string/usertype" />
+                    android:paddingTop="10dp" />
 
                 <!--<Spinner
                     android:layout_width="match_parent"
@@ -64,16 +62,14 @@
                     android:layout_height="wrap_content"
                     android:entries="@array/preferred_teacher_gender"
                     android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    android:prompt="@string/usertype" />
+                    android:paddingTop="10dp" />
 
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:entries="@array/class_of_student"
                     android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    android:prompt="@string/usertype" />
+                    android:paddingTop="10dp" />
 
                 <!--<Spinner
                     android:layout_width="match_parent"
